--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -86,6 +86,7 @@
 
       <div class="row">
         <div class="col-md-12">
+          {% if listings.has_other_pages %}
           <ul class="pagination">
             <li class="page-item disabled">
               <a class="page-link" href="#">&laquo;</a>
@@ -103,6 +104,7 @@
               <a class="page-link" href="#">&raquo;</a>
             </li>
           </ul>
+          {% endif %}
         </div>
       </div>
     </div>
