Added keyword search, city search, state search

--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
-          <form action="search.html">
+          <form action="{% url 'search' %}">
             <!-- Form Row 1 -->
             <div class="form-row">
               <div class="col-md-4 mb-3">
@@ -129,8 +129,6 @@
                   <p>No Listings Available</p>
                 </div>
             {% endif %}
-        
-
         </div>
     </div>
   </section>
