--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -26,7 +26,11 @@
                 <select name="state" class="form-control">
                   <option selected="true" disabled="disabled">State (All)</option>
                     {% for key, value in state_choices.items %}
-                        <option value="{{ key }}">{{ value }}</option>
+                            <option value="{{ key }}" 
+                            {% if key == values.state %}
+                                selected
+                            {% endif %}
+                            >{{ value }}</option>
                     {% endfor %}
                 </select>
               </div>
@@ -38,7 +42,11 @@
                 <select name="bedrooms" class="form-control">
                   <option selected="true" disabled="disabled">Bedrooms (Any)</option>
                     {% for key, value in bedroom_choices.items %}
-                        <option value="{{ key }}">{{ value }}</option>
+                        <option value="{{ key }}"
+                        {% if key == values.bedrooms %}
+                            selected
+                        {% endif %}
+                        >{{ value }}</option>
                     {% endfor %}
                 </select>
               </div>
@@ -46,7 +54,11 @@
                 <select name="price" class="form-control">
                   <option selected="true" disabled="disabled">Max Price (All)</option>
                     {% for key, value in price_choices.items %}
-                        <option value="{{ key }}">{{ value }}</option>
+                        <option value="{{ key }}"
+                        {% if key == values.price %}
+                            selected
+                        {% endif %}
+                        >{{ value }}</option>
                     {% endfor %}
                 </select>
               </div>
